##################################################
## Project
##################################################
project(Gui)

##################################################
## Target
##################################################
add_custom_target(Gui)

##################################################
## Projects
##################################################
add_subdirectory(PLGui)
if(NOT CMAKETOOLS_MINIMAL)
	add_subdirectory(PLXmlText)
endif()

##################################################
## Dependencies
##################################################
add_dependencies(PixelLight Gui)
