##################################################
## Project
##################################################
project(Gui)

##################################################
## Target
##################################################
add_custom_target(Gui)

##################################################
## Projects
##################################################
add_subdirectory(PLGui)

##################################################
## Dependencies
##################################################
add_dependencies(PixelLight Gui)
