##################################################
## Project
##################################################
project(Network)

##################################################
## Target
##################################################
add_custom_target(Network)

##################################################
## Projects
##################################################
add_subdirectory(PLNetwork)
add_subdirectory(PLIRC)
add_subdirectory(PLJabber)

##################################################
## Dependencies
##################################################
add_dependencies(PixelLight Network)
