##################################################
## Project
##################################################
project(Network)

##################################################
## Target
##################################################
add_custom_target(Network)

##################################################
## Projects
##################################################
add_subdirectory(PLNetwork)

##################################################
## Dependencies
##################################################
add_dependencies(PixelLight Network)
